--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="nav-wrapper">
             <img class="logo" src="logo.svg">
 
-            <ul class="menu-ul" style="display: none;">
+            <ul class="menu-ul">
                 <li>BANK</li>
                 <li>BUSINESS</li>
                 <li>INVESTING</li>
