--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" property="og:title" content="Currency Exchange App">
     <meta name="image" property="og:image" content="https://raw.githubusercontent.com/NikoFX/currencyExchangeAPI/main/header.png">
-    <meta name="description" property="og:description" content="A little responsive web exchange application built with pure JavaScript, HTML, and CSS that enables users to view and convert currency rates using an API">
-    <title>Exchange</title>
+    <meta name=”description” property=”og:description” content=”TEST”>
+                                                                                                                                 
+                                                                                                                                 <title>Exchange</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
