--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang=”en” prefix=”og: http://ogp.me/ns#">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" property="og:title" content="Currency Exchange App">
-    <meta name="image" property="og:image" content="https://raw.githubusercontent.com/NikoFX/currencyExchangeAPI/main/header.png">
-    <meta name=”description” property=”og:description” content=”TEST”>
+    <meta name="image" property="og:image" content="./header.png">
                                                                                                                                  
-                                                                                                                                 <title>Exchange</title>
+    <title>Exchange</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
