--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="image" property="og:image" content="./header.png">
+    <meta name="description" property="og:description" content="Exchange App built with pure JavaScript, HTML, and CSS that enables users to view and convert currency rates using an API">
                                                                                                                                  
     <title>Exchange</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
