--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="image" property="og:image" content="./header.png">
+    <meta name="image" property="og:image" content="https://raw.githubusercontent.com/NikoFX/currencyExchangeAPI/main/header.png">
     <meta name="description" property="og:description" content="Exchange App built with pure JavaScript, HTML, and CSS that enables users to view and convert currency rates using an API">
                                                                                                                                  
     <title>Exchange</title>
